--- a/_site.yml
+++ b/_site.yml
@@ -6,6 +6,9 @@ collections:
 output_dir: "docs"
 theme: lore_theme.css
 base_url: loreabad6.github.io
+twitter:
+  site: "@loreabad6"
+  creator: "@loreabad6"
 repository_url: https://github.com/loreabad6/loreabad6.github.io
 navbar:
   search: false
