Test to add publications, will delete

--- a/_site.yml
+++ b/_site.yml
@@ -16,6 +16,8 @@ navbar:
   right:
     - text: "Posts"
       href: index.html
+    # - text: "Publications"
+    #   href: research.html
     - text: "About"
       href: about.html
     - icon: fa fa-twitter
