--- a/_site.yml
+++ b/_site.yml
@@ -22,4 +22,7 @@ navbar:
       href: about.html
     - icon: fa fa-twitter
       href: https://twitter.com/loreabad6
-output: distill::distill_article
+output:
+  distill::distill_article:
+    includes:
+      in_header: giscus.html
