--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ collections:
     share: [twitter, linkedin]
 output_dir: "docs"
 theme: lore_theme.css
+description: |
+  Collection of my r-spatial and rstats related work.
 base_url: https://loreabad6.github.io
 twitter:
   site: "@loreabad6"
@@ -22,6 +24,8 @@ navbar:
       href: about.html
     - icon: fa fa-twitter
       href: https://twitter.com/loreabad6
+    - icon: fa fa-rss
+      href: index.xml
 output:
   distill::distill_article:
     includes:
